# point_picker

./: .cproject  .project  CMakeLists.txt  README.md  kinrs_visualizer.cpp  pcl_point_pick.cpp
